--- a/package.json
+++ b/package.json
@@ -22,11 +22,15 @@
     "clean": "ets clean"
   },
   "dependencies": {
+    "@types/jsonwebtoken": "^8.5.5",
+    "@types/md5": "^2.3.1",
     "async-validator": "^4.0.3",
     "egg": "^2.6.1",
+    "egg-jwt": "^3.1.7",
     "egg-mongoose": "^3.3.1",
     "egg-scripts": "^2.6.0",
-    "egg-validate": "^2.0.2"
+    "egg-validate": "^2.0.2",
+    "md5": "^2.3.0"
   },
   "devDependencies": {
     "@types/mocha": "^2.2.40",
